--- a/index.html
+++ b/index.html
@@ -70,9 +70,15 @@
         <section>
           <h2>Чем мы занимаемся</h2>
           <ul>
-            <li><img src="./images/img1.jpg" alt="разработка кода" /></li>
-            <li><img src="./images/img2.jpg" alt="создание макета" /></li>
-            <li><img src="./images/img3.jpg" alt="дизайн проект" /></li>
+            <li>
+              <img src="./images/img1.jpg" alt="разработка кода" width="370" />
+            </li>
+            <li>
+              <img src="./images/img2.jpg" alt="создание макета" width="370" />
+            </li>
+            <li>
+              <img src="./images/img3.jpg" alt="дизайн проект" width="370" />
+            </li>
           </ul>
         </section>
       </div>
@@ -83,28 +89,44 @@
           <ul>
             <li>
               <div>
-                <img src="./images/team1.jpg" alt="фото Игоря Демьяненко" />
+                <img
+                  src="./images/team1.jpg"
+                  alt="фото Игоря Демьяненко"
+                  width="270"
+                />
                 <h3>Игорь Демьяненко</h3>
                 <p>Product Designer</p>
               </div>
             </li>
             <li>
               <div>
-                <img src="./images/team2.jpg" alt="фото Ольги Репиной" />
+                <img
+                  src="./images/team2.jpg"
+                  alt="фото Ольги Репиной"
+                  width="270"
+                />
                 <h3>Ольга Репина</h3>
                 <p>Frontend Developer</p>
               </div>
             </li>
             <li>
               <div>
-                <img src="./images/team3.jpg" alt="фото Николая Тарасова" />
+                <img
+                  src="./images/team3.jpg"
+                  alt="фото Николая Тарасова"
+                  width="270"
+                />
                 <h3>Николай Тарасов</h3>
                 <p>Marketing</p>
               </div>
             </li>
             <li>
               <div>
-                <img src="./images/team4.jpg" alt="фото Михаила Ермакова" />
+                <img
+                  src="./images/team4.jpg"
+                  alt="фото Михаила Ермакова"
+                  width="270"
+                />
                 <h3>Михаил Ермаков</h3>
                 <p>UI Designer</p>
               </div>
