--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <nav>
-        <a href="">WebStudio</a>
+        <a href=""><span>Web</span>Studio</a>
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
@@ -23,7 +23,10 @@
     <main>
       <div>
         <section>
-          <h1>Эффективные решения для вашего бизнеса</h1>
+          <h1>
+            Эффективные решения <br />
+            для вашего бизнеса
+          </h1>
           <form>
             <button>Заказать услугу</button>
           </form>
@@ -137,12 +140,12 @@
     </main>
     <footer>
       <div>
-        <a href="">WebStudio</a>
+        <a href=""><span>Web</span>Studio</a>
         <address>
           <ul>
             <li>г. Киев, пр-т Леси Украинки, 26</li>
-            <li>info@example.com</li>
-            <li>+38 099 111 11 11</li>
+            <li><a href="mailto:info@example.com">info@example.com</a></li>
+            <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
           </ul>
         </address>
       </div>
